--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,5 +54,5 @@ header {
 .search-form {
   text-align: center;
   padding: 1em;
-  background-color: #a2aaa7 !important;
+  background-color: #44aaee !important;
 }
